fix surefire maven plugin (tests not working)