@@ -127,9 +127,7 @@
               <groupId>org.projectlombok</groupId>
               <artifactId>lombok</artifactId>
               <version>${lombok.version}</version>
-
             </path>
-            <!-- other annotation processors -->
           </annotationProcessorPaths>
           <compilerArgs>
             <compilerArg>
@@ -139,29 +137,10 @@
         </configuration>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.20</version>
-        <!--        <configuration>-->
-        <!--          <useSystemClassLoader>false</useSystemClassLoader>-->
-        <!--          <forkCount>3</forkCount>-->
-        <!--          <reuseForks>true</reuseForks>-->
-        <!--          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
-        <!--        </configuration>-->
+        <version>3.0.0-M3</version>
       </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>cobertura-maven-plugin</artifactId>
-        <version>2.7</version>
-        <configuration>
-          <formats>
-            <format>html</format>
-            <format>xml</format>
-          </formats>
-          <check />
-        </configuration>
-      </plugin>
-
     </plugins>
   </build>
-
 </project>
